--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
 
         <!-- Line Chart for Mobility Trends -->
-       <h3>Mobility Solution Trends Across Cities</h3>
+        <h3>Mobility Solution Trends Across Cities</h3>
         <div id="line-chart-container">
             <canvas id="line-chart" width="400" height="400"></canvas>
         </div>
@@ -206,7 +206,8 @@
     .city-selection input[type="checkbox"] {
         accent-color: #4CAF50;
     }
-       /* Responsive Design */
+
+    /* Responsive Design */
     @media (max-width: 600px) {
         .comparison-container {
             padding: 10px;
@@ -240,103 +241,105 @@
     }
 
     function displayCharts(selectedCities) {
-    const labels = ['Car-sharing Apps', 'Parking Apps', 'Bicycle Hiring', 'Online Scheduling', 'Traffic Info Apps'];
+        const labels = ['Car-sharing Apps', 'Parking Apps', 'Bicycle Hiring', 'Online Scheduling', 'Traffic Info Apps'];
 
-    // Radar Chart: Mobility solutions by city
-    const radarData = selectedCities.map((city, index) => ({
-        label: `${city.city}, ${city.country}`,
-        data: Object.values(city.mobility_solutions),
-        backgroundColor: `rgba(${(index * 50) % 255}, ${(index * 100) % 255}, ${(index * 150) % 255}, 0.2)`,
-        borderColor: `rgba(${(index * 50) % 255}, ${(index * 100) % 255}, ${(index * 150) % 255}, 1)`,
-        borderWidth: 1
-    }));
-// New: Stacked Bar Chart for Mobility Solution Trends
-    const stackedBarData = {
-        labels: selectedCities.map(city => city.city),
-        datasets: labels.map((solution, i) => ({
-            label: solution,
-            data: selectedCities.map(city => city.mobility_solutions[solution]),
-            backgroundColor: `rgba(${i * 50}, ${100 + i * 50}, ${150 - i * 30}, 0.5)`
-        }))
-    };
+        // Radar Chart: Mobility solutions by city
+        const radarData = selectedCities.map((city, index) => ({
+            label: `${city.city}, ${city.country}`,
+            data: Object.values(city.mobility_solutions),
+            backgroundColor: `rgba(${(index * 50) % 255}, ${(index * 100) % 255}, ${(index * 150) % 255}, 0.2)`,
+            borderColor: `rgba(${(index * 50) % 255}, ${(index * 100) % 255}, ${(index * 150) % 255}, 1)`,
+            borderWidth: 1
+        }));
 
-    // New: Horizontal Bar Chart for Average Mobility Solution Scores
-    const avgData = selectedCities.map(city => {
-        const avgScore = Object.values(city.mobility_solutions).reduce((a, b) => a + b) / labels.length;
-        return { city: city.city, avg: avgScore };
-    });
-    const horizontalBarData = {
-        labels: avgData.map(d => d.city),
-        datasets: [{
-            label: 'Average Mobility Score',
-            data: avgData.map(d => d.avg),
-            backgroundColor: 'rgba(75, 192, 192, 0.5)'
-        }]
-    };
+        // Stacked Bar Chart for Mobility Solution Trends
+        const stackedBarData = {
+            labels: selectedCities.map(city => city.city),
+            datasets: labels.map((solution, i) => ({
+                label: solution,
+                data: selectedCities.map(city => city.mobility_solutions[solution]),
+                backgroundColor: `rgba(${i * 50}, ${100 + i * 50}, ${150 - i * 30}, 0.5)`
+            }))
+        };
 
-    // Pie Chart: Distribution in first selected city
-    const avgDistribution = labels.map(solution =>
-        selectedCities.reduce((sum, city) => sum + city.mobility_solutions[solution], 0) / selectedCities.length
-    );
-    const pieData = {
-        labels: labels,
-        datasets: [{
-            label: 'Average Distribution',
-            data: avgDistribution,
-            backgroundColor: labels.map((_, i) => `rgba(${i * 50}, ${100 + i * 40}, ${150 - i * 20}, 0.5)`)
-        }]
-    };
+        // Horizontal Bar Chart for Average Mobility Solution Scores
+        const avgData = selectedCities.map(city => {
+            const avgScore = Object.values(city.mobility_solutions).reduce((a, b) => a + b, 0) / labels.length;
+            return { city: city.city, avg: avgScore };
+        });
+        const horizontalBarData = {
+            labels: avgData.map(d => d.city),
+            datasets: [{
+                label: 'Average Mobility Score',
+                data: avgData.map(d => d.avg),
+                backgroundColor: 'rgba(75, 192, 192, 0.5)'
+            }]
+        };
 
-    // Initialize Charts
-    if (window.comparisonChart) window.comparisonChart.destroy();
-    if (window.horizontalBarChart) window.horizontalBarChart.destroy();
-    if (window.stackedBarChart) window.stackedBarChart.destroy();
-    if (window.pieChart) window.pieChart.destroy();
+        // Pie Chart: Average Distribution of Solutions
+        const avgDistribution = labels.map(solution =>
+            selectedCities.reduce((sum, city) => sum + city.mobility_solutions[solution], 0) / selectedCities.length
+        );
+        const pieData = {
+            labels: labels,
+            datasets: [{
+                label: 'Average Distribution',
+                data: avgDistribution,
+                backgroundColor: labels.map((_, i) => `rgba(${i * 50}, ${100 + i * 40}, ${150 - i * 20}, 0.5)`)
+            }]
+        };
 
-    // Radar Chart
-    const radarCtx = document.getElementById("comparison-chart").getContext("2d");
-    window.comparisonChart = new Chart(radarCtx, {
-        type: "radar",
-        data: { labels, datasets: radarData },
-        options: { responsive: true }
-    });
+        // Destroy previous charts if they exist
+        if (window.comparisonChart) window.comparisonChart.destroy();
+        if (window.stackedBarChart) window.stackedBarChart.destroy();
+        if (window.horizontalBarChart) window.horizontalBarChart.destroy();
+        if (window.pieChart) window.pieChart.destroy();
 
-    // New: Stacked Bar Chart for Mobility Solution Trends
-    const stackedBarCtx = document.getElementById("bar-chart").getContext("2d");
-    window.stackedBarChart = new Chart(stackedBarCtx, {
-        type: 'bar',
-        data: stackedBarData,
-        options: {
-            responsive: true,
-            scales: {
-                x: {
-                    stacked: true
-                },
-                y: {
-                    stacked: true
+        // Radar Chart
+        const radarCtx = document.getElementById("comparison-chart").getContext("2d");
+        window.comparisonChart = new Chart(radarCtx, {
+            type: "radar",
+            data: { labels, datasets: radarData },
+            options: { responsive: true }
+        });
+
+        // Stacked Bar Chart
+        const stackedBarCtx = document.getElementById("bar-chart").getContext("2d");
+        window.stackedBarChart = new Chart(stackedBarCtx, {
+            type: 'bar',
+            data: stackedBarData,
+            options: {
+                responsive: true,
+                scales: {
+                    x: {
+                        stacked: true
+                    },
+                    y: {
+                        stacked: true
+                    }
                 }
             }
-        }
-    });
+        });
 
-    // New: Horizontal Bar Chart for Average Mobility Solution Scores
-    const horizontalBarCtx = document.getElementById("line-chart").getContext("2d");
-    window.horizontalBarChart = new Chart(horizontalBarCtx, {
-        type: 'horizontalBar',
-        data: horizontalBarData,
-        options: { responsive: true }
-    });
+        // Horizontal Bar Chart for Average Mobility Solution Scores
+        const horizontalBarCtx = document.getElementById("line-chart").getContext("2d");
+        window.horizontalBarChart = new Chart(horizontalBarCtx, {
+            type: 'bar', // Use 'bar' instead of 'horizontalBar'
+            data: horizontalBarData,
+            options: {
+                indexAxis: 'y', // Set the index axis to 'y' to make it horizontal
+                responsive: true
+            }
+        });
 
-    // Pie Chart
-    const pieCtx = document.getElementById("pie-chart").getContext("2d");
-    window.pieChart = new Chart(pieCtx, {
-        type: "pie",
-        data: pieData,
-        options: { responsive: true }
-    });
-}
-        
-
+        // Pie Chart
+        const pieCtx = document.getElementById("pie-chart").getContext("2d");
+        window.pieChart = new Chart(pieCtx, {
+            type: "pie",
+            data: pieData,
+            options: { responsive: true }
+        });
+    }
 
     document.getElementById("compare-btn").addEventListener("click", () => {
         const selectedCities = getSelectedCities();
@@ -350,13 +353,14 @@
     document.getElementById("reset-btn").addEventListener("click", () => {
         document.querySelectorAll("#city-checkboxes input[type=checkbox]").forEach(checkbox => checkbox.checked = false);
         if (window.comparisonChart) window.comparisonChart.destroy();
-        if (window.barChart) window.barChart.destroy();
-        if (window.lineChart) window.lineChart.destroy();
+        if (window.stackedBarChart) window.stackedBarChart.destroy();
+        if (window.horizontalBarChart) window.horizontalBarChart.destroy();
         if (window.pieChart) window.pieChart.destroy();
     });
 
     window.onload = populateCityCheckboxes;
 </script>
+
 
 
 
