--- a/index.html
+++ b/index.html
@@ -143,14 +143,8 @@
             <canvas id="clustered-bar-chart" width="400" height="400"></canvas>
         </div>
 
-        <!-- Line Chart for Overall Mobility Scores -->
-        <h3>Overall Mobility Scores Across Selected Cities</h3>
-        <div id="line-chart-container">
-            <canvas id="line-chart" width="400" height="400"></canvas>
-        </div>
-
-        <!-- Pie Chart for Average Distribution of Solutions -->
-        <h3>Average Mobility Solution Distribution Across Selected Cities</h3>
+        <!-- Pie Chart for Average Mobility Solution Distribution -->
+        <h3>Average Mobility Solution Distribution</h3>
         <div id="pie-chart-container">
             <canvas id="pie-chart" width="400" height="400"></canvas>
         </div>
@@ -369,6 +363,7 @@
 
     window.onload = populateCityCheckboxes;
 </script>
+
 
 
     </div>
