--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
         <div class="header-title">
             <img src="logo.png" alt="Company Logo" class="logo">
             <h1>Smart City Mobility Solutions</h1>
-        </div>
         <div class="navbar">
-            <a href="#" class="tab-link active-tab" onclick="openTab(event, 'Histograms')">Histograms</a>
-            <a href="#" class="tab-link" onclick="openTab(event, 'Cities-Comparison')">Cities-Comparison</a>
-        </div>
+    <a href="#" class="tab-link active-tab" onclick="openTab(event, 'Histograms')">Histograms</a>
+    <a href="#" class="tab-link" onclick="openTab(event, 'Cities-Comparison')">Cities-Comparison</a>
+    <a href="#" class="tab-link" onclick="openTab(event, 'Smart-Suggestions')">Smart Suggestions</a>
+</div>
+
     </div>
 
     <div id="Histograms" class="tab-content active-content">
