--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="navbar">
             <a href="#" class="tab-link active-tab" onclick="openTab(event, 'Histograms')">Histograms</a>
             <a href="#" class="tab-link" onclick="openTab(event, 'Cities-Comparison')">Cities-Comparison</a>
+            <a href="#" class="tab-link" onclick="openTab(event, 'Smart-Suggestions')">Smart Suggestions</a>
         </div>
     </div>
 
