--- a/index.html
+++ b/index.html
@@ -166,6 +166,38 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="cityData_full_with_country_codes.js"></script>
+<script>
+    document.getElementById('cityComparisonForm').addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        const traffic = parseFloat(document.getElementById('traffic').value);
+        const transport = parseFloat(document.getElementById('transport').value);
+
+        const newCity = {
+            traffic_congestion_not_a_problem: traffic,
+            public_transport_satisfactory: transport,
+        };
+
+        const similarCities = calculateSimilarity(newCity, cityData);
+        const mostSimilar = similarCities[0];
+
+        document.getElementById('results').innerHTML =
+            `<p>The most similar city is <strong>${mostSimilar.city}</strong>.</p>
+             <p>You can adopt similar strategies to improve mobility!</p>`;
+    });
+
+    function calculateSimilarity(newCity, cityData) {
+        return cityData
+            .map(city => {
+                const distance = Math.sqrt(
+                    Math.pow(city.traffic_congestion_not_a_problem - newCity.traffic_congestion_not_a_problem, 2) +
+                    Math.pow(city.public_transport_satisfactory - newCity.public_transport_satisfactory, 2)
+                );
+                return { city: city.city, distance };
+            })
+            .sort((a, b) => a.distance - b.distance);
+    }
+</script>
 
 <style>
     .comparison-container {
